--- a/src/main/webapp/static/js/style.css
+++ b/src/main/webapp/static/js/style.css
@@ -447,7 +447,7 @@ font-size:12px;
 color: #999999;
 background-color:#fff;
 border:1px #DFDFDF solid;
-float:left;
+float:right;
 }
 input.register{
 width:71px;
